--- a/src/modules.variables.scss
+++ b/src/modules.variables.scss
@@ -43,6 +43,7 @@ $zIndexCpnPopupFileManage: 200;
 	border-radius: $borderRadius;
 	cursor: pointer;
 	outline: none;
+	user-select: none;
 
 	svg {
 		height: 12px;
@@ -79,10 +80,18 @@ $zIndexCpnPopupFileManage: 200;
 	border: 1px solid $color;
 	color: $color;
 	transition: 0.25s ease;
-	opacity: 0.7;
+	opacity: 1;
+
+	svg * {
+		fill: $color;
+	}
 
 	&:hover {
 		opacity: 1;
+
+		svg * {
+			fill: $white;
+		}
 	}
 }
 
